alignement bug solved

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,7 @@
     width: 90%;
   }
 }
+
+* {
+  box-sizing: border-box;
+}
